API simpan data dgn realtime database

--- a/app/src/main/res/layout/activity_formuliraktif3.xml
+++ b/app/src/main/res/layout/activity_formuliraktif3.xml
@@ -197,7 +197,7 @@
         android:layout_width="370dp"
         android:layout_height="44dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="Aruni"
+        android:hint=""
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
@@ -241,7 +241,7 @@
         android:layout_width="370dp"
         android:layout_height="44dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="09031282227087"
+        android:hint=""
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
@@ -257,7 +257,7 @@
         android:layout_width="370dp"
         android:layout_height="44dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="081234567890"
+        android:hint=""
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
@@ -266,7 +266,7 @@
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView10"
-        app:layout_constraintVertical_bias="0.563" />
+        app:layout_constraintVertical_bias="0.567" />
 
     <TextView
         android:id="@+id/textView31"
@@ -287,7 +287,7 @@
         android:layout_width="370dp"
         android:layout_height="44dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="09031282227087"
+        android:hint=""
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
