--- a/app/src/main/res/layout/activity_formuliraktif.xml
+++ b/app/src/main/res/layout/activity_formuliraktif.xml
@@ -174,7 +174,7 @@
         android:layout_width="370dp"
         android:layout_height="44dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="Aruni"
+        android:hint=""
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
@@ -206,7 +206,7 @@
         android:background="@drawable/rounded_edittext"
         android:inputType="text"
         android:padding="10dp"
-        android:text="09031282227087"
+        android:text=""
         android:textColor="#7D8BB7"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView28"
@@ -235,7 +235,7 @@
         android:layout_width="370dp"
         android:layout_height="44dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="081234567890"
+        android:hint=""
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
@@ -265,7 +265,7 @@
         android:layout_width="370dp"
         android:layout_height="44dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="2"
+        android:hint=""
         android:padding="10dp"
         android:textColor="#7D8BB7"
         android:textSize="16sp"
