--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -1,56 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".Home2Activity">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="480dp"
-        android:layout_height="850dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/depan" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"> <!-- Perhatikan perubahan height -->
 
-    <EditText
-        android:id="@+id/editTextText2"
-        android:layout_width="370dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="264dp"
-        android:background="@drawable/barsearch"
-        android:drawableStart="@drawable/iconsrc"
-        android:hint="  Masukan Kata Kunci"
-        android:padding="10dp"
-        android:textColor="#7D8BB7"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="480dp"
+            android:layout_height="850dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/depan" />
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Selamat Pagi,"
-        android:textColor="#FFFFFF"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.237"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.061" />
+        <EditText
+            android:id="@+id/editTextText2"
+            android:layout_width="370dp"
+            android:layout_height="44dp"
+            android:layout_marginTop="264dp"
+            android:background="@drawable/barsearch"
+            android:drawableStart="@drawable/iconsrc"
+            android:hint="  Masukan Kata Kunci"
+            android:padding="10dp"
+            android:textColor="#7D8BB7"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Selamat"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.217"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.059" />
+
+        <!-- Sisa elemen Anda tetap seperti semula -->
+
+
+
+<TextView
         android:id="@+id/textView4"
         android:layout_width="377dp"
         android:layout_height="31dp"
@@ -69,7 +77,7 @@
         android:id="@+id/textView3"
         android:layout_width="125dp"
         android:layout_height="38dp"
-        android:text="Aruni"
+        android:text="Pagi"
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -222,4 +230,6 @@
         app:srcCompat="@drawable/fb" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
