--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,209 +7,203 @@
     android:layout_height="match_parent"
     tools:context=".FeedbackActivity">
 
-    <!-- Gambar Profil -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="wrap_content">
 
-    <!-- Nama Pengguna dan Email -->
+        <!-- Gambar Profil -->
 
-    <ImageView
-        android:id="@+id/imageView17"
-        android:layout_width="464dp"
-        android:layout_height="211dp"
-        android:layout_marginBottom="696dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/img31" />
+        <ImageView
+            android:id="@+id/imageView17"
+            android:layout_width="464dp"
+            android:layout_height="211dp"
+            android:layout_marginBottom="964dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/img31" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Feedback"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.079" />
-
-    <ImageButton
-        android:id="@+id/back"
-        android:layout_width="68dp"
-        android:layout_height="69dp"
-        android:background="#4A8CC4"
-        android:contentDescription="back"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.061"
-        app:srcCompat="@drawable/back" />
-
-    <ImageView
-        android:id="@+id/imgProfile"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="196dp"
-        android:contentDescription="Profile Image"
-        android:src="@drawable/img_6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aruni"
-        android:textColor="@color/blue_500"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0901322226076@android.unsri.ac.id"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:textColor="@color/blue_500"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Teks Rating -->
-    <TextView
-        android:id="@+id/txtRatingLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Rating Pengalaman Anda"
-        android:textStyle="bold"
-        android:textColor="@color/yellow_500"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Rating Bar -->
-    <RatingBar
-        android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numStars="5"
-        android:stepSize="1.0"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtRatingLabel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-    <!-- Teks untuk Menanyakan Pengalaman -->
-    <TextView
-        android:id="@+id/txtFeedbackOptions"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bagaimana pengalaman Anda menggunakan layanan akademik UNSRI? Tinggalkan pendapat Anda!"
-        android:textSize="12sp"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- RadioGroup untuk pilihan feedback -->
-    <RadioGroup
-        android:id="@+id/radioGroupFeedback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/txtFeedbackOptions"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <!-- Pilihan Responsif -->
-        <RadioButton
-            android:id="@+id/radioResponsif"
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Responsif"
-            android:buttonTint="@color/blue_500"
-            android:textSize="14sp" />
+            android:text="Feedback"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.079" />
 
-        <!-- Pilihan Lambat -->
-        <RadioButton
-            android:id="@+id/radioLambat"
+        <ImageButton
+            android:id="@+id/back"
+            android:layout_width="68dp"
+            android:layout_height="69dp"
+            android:background="#4A8CC4"
+            android:contentDescription="back"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.064"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.061"
+            app:srcCompat="@drawable/back" />
+
+        <ImageView
+            android:id="@+id/imgProfile"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="196dp"
+            android:contentDescription="Profile Image"
+            android:src="@drawable/img_6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.52"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lambat"
-            android:buttonTint="@color/blue_500"
-            android:layout_marginStart="16dp"
-            android:textSize="14sp" />
+            android:text="Aruni"
+            android:textColor="@color/blue_500"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imgProfile"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Pilihan Cepat -->
-        <RadioButton
-            android:id="@+id/radioCepat"
+        <TextView
+            android:id="@+id/txtEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cepat"
-            android:buttonTint="@color/blue_500"
-            android:layout_marginStart="16dp"
-            android:textSize="14sp" />
+            android:text=""
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:textColor="@color/blue_500"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Pilihan Lainnya -->
-        <RadioButton
-            android:id="@+id/radioLainnya"
+        <!-- Teks Rating -->
+        <TextView
+            android:id="@+id/txtRatingLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lainnya"
-            android:buttonTint="@color/blue_500"
-            android:layout_marginStart="16dp"
-            android:textSize="14sp" />
-    </RadioGroup>
+            android:text="Rating Pengalaman Anda"
+            android:textStyle="bold"
+            android:textColor="@color/yellow_500"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
+        <!-- Rating Bar -->
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:stepSize="1.0"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtRatingLabel"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Input Teks untuk Feedback -->
+        <!-- Teks untuk Menanyakan Pengalaman -->
+        <TextView
+            android:id="@+id/txtFeedbackOptions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bagaimana pengalaman Anda menggunakan layanan akademik UNSRI? Tinggalkan pendapat Anda!"
+            android:textSize="12sp"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Tombol Kirim -->
+        <!-- RadioGroup untuk pilihan feedback -->
+        <RadioGroup
+            android:id="@+id/radioGroupFeedback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/txtFeedbackOptions"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-    <EditText
-        android:id="@+id/edtFeedback"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="128dp"
-        android:background="@drawable/rounded_border"
-        android:gravity="top"
-        android:hint="Bagikan pendapat Anda..."
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-        app:layout_constraintWidth_percent="0.9" />
+            <RadioButton
+                android:id="@+id/radioResponsif"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Responsif"
+                android:buttonTint="@color/blue_500"
+                android:textSize="14sp" />
 
-    <Button
-        android:id="@+id/btnSubmit"
-        android:layout_width="156dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/yellow_500"
-        android:text="Kirim"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtFeedback" />
+            <RadioButton
+                android:id="@+id/radioLambat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lambat"
+                android:buttonTint="@color/blue_500"
+                android:layout_marginStart="16dp"
+                android:textSize="14sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <RadioButton
+                android:id="@+id/radioCepat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cepat"
+                android:buttonTint="@color/blue_500"
+                android:layout_marginStart="16dp"
+                android:textSize="14sp" />
+
+            <RadioButton
+                android:id="@+id/radioLainnya"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Lainnya"
+                android:buttonTint="@color/blue_500"
+                android:layout_marginStart="16dp"
+                android:textSize="14sp" />
+        </RadioGroup>
+
+        <!-- Input Teks untuk Feedback -->
+        <EditText
+            android:id="@+id/edtFeedback"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:background="@drawable/rounded_border"
+            android:gravity="top"
+            android:hint="Bagikan pendapat Anda..."
+            android:padding="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroupFeedback"
+            app:layout_constraintWidth_percent="0.9" />
+
+        <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="156dp"
+            android:layout_height="48dp"
+            android:backgroundTint="@color/yellow_500"
+            android:text="Kirim"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edtFeedback" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
